--- a/styles/slider.css
+++ b/styles/slider.css
@@ -6,9 +6,6 @@
 }
 
 body {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
     font-family: 'Nunito Sans', sans-serif;
 }
 
@@ -16,9 +13,13 @@ img {
     display: block;
 }
 
+.btn:hover {
+    cursor: pointer;
+}
+
 .projects {
     background-color: #131313;
-    height: 1074px;
+    height: 100vh;
 }
 
 .projects__wrapper {
@@ -112,14 +113,11 @@ img {
 }
 
 .slider__button-pt {
-    padding: 0;
     background-color: rgba(255, 255, 255, 0.3);;
     width: 10px;
     height: 10px;
     border: none;
     border-radius: 50%;
-    
-
 }
 
 .slider__button-pt_active {
@@ -158,7 +156,7 @@ img {
 .slider__tab_active {
     color: #E3B873;
     border-bottom: 1px solid #E3B873;
-    transition: color 1s ease-in-out;
+    transition: all 0.2s ease-in-out;
 }
 
 .slider__container {
@@ -172,21 +170,9 @@ img {
 }
 
 .slider__img {
+    display: unset;
 }
 
 .slider__img_active {
     display: unset;
-}
-
-
-.online-control {
-    margin-top: -324px;
-    margin-bottom: 140px;
-}
-
-.online-control__wrapper {
-    box-sizing: border-box;
-    width: 817px;
-    padding: 0 10px;
-    margin: 0 auto;
 }
